@startuml

title __P2-TRIPUB-DAO's Class Diagram__\n

  namespace ub.edu.controller {
    class ub.edu.controller.Controller {
    }
  }
  

  namespace ub.edu.model {
    class ub.edu.model.Comarca {
    }
  }
  

  namespace ub.edu.model {
    class ub.edu.model.Persona {
    }
  }
  

  namespace ub.edu.model {
    class ub.edu.model.Ruta {
    }
  }
  

  namespace ub.edu.model {
    class ub.edu.model.XarxaPersones {
    }
  }
  

  namespace ub.edu.resources.dao {
    interface ub.edu.resources.dao.DAO {
    }
  }
  

  namespace ub.edu.resources.dao {
    interface ub.edu.resources.dao.DAOComarca {
    }
  }
  

  namespace ub.edu.resources.dao {
    interface ub.edu.resources.dao.DAOPersona {
    }
  }
  

  namespace ub.edu.resources.dao {
    interface ub.edu.resources.dao.DAORelacioComarcaRuta {
    }
  }
  

  namespace ub.edu.resources.dao {
    interface ub.edu.resources.dao.DAORuta {
    }
  }
  

  namespace ub.edu.resources.dao {
    namespace MOCK {
      class ub.edu.resources.dao.MOCK.DAOComarcaMOCK {
      }
    }
  }
  

  namespace ub.edu.resources.dao {
    namespace MOCK {
      class ub.edu.resources.dao.MOCK.DAOPersonaMOCK {
      }
    }
  }
  

  namespace ub.edu.resources.dao {
    namespace MOCK {
      class ub.edu.resources.dao.MOCK.DAORelacioComarcaRutaMOCK {
      }
    }
  }
  

  namespace ub.edu.resources.dao {
    namespace MOCK {
      class ub.edu.resources.dao.MOCK.DAORutaMOCK {
      }
    }
  }
  

  namespace ub.edu.resources.dao {
    class ub.edu.resources.dao.Parell {
    }
  }
  

  namespace ub.edu.resources.service {
    interface ub.edu.resources.service.AbstractFactoryData {
    }
  }
  

  namespace ub.edu.resources.service {
    class ub.edu.resources.service.DataService {
    }
  }
  

  namespace ub.edu.resources.service {
    class ub.edu.resources.service.FactoryMOCK {
    }
  }
  

  ub.edu.controller.Controller o-- ub.edu.resources.service.DataService : dataService
  ub.edu.controller.Controller o-- ub.edu.resources.service.AbstractFactoryData : factory
  ub.edu.controller.Controller o-- ub.edu.model.XarxaPersones : xarxaPersones
  ub.edu.resources.dao.MOCK.DAOComarcaMOCK .up.|> ub.edu.resources.dao.DAOComarca
  ub.edu.resources.dao.MOCK.DAOPersonaMOCK .up.|> ub.edu.resources.dao.DAOPersona
  ub.edu.resources.dao.MOCK.DAORelacioComarcaRutaMOCK .up.|> ub.edu.resources.dao.DAORelacioComarcaRuta
  ub.edu.resources.dao.MOCK.DAORutaMOCK .up.|> ub.edu.resources.dao.DAORuta
  ub.edu.resources.dao.DAO <|-- ub.edu.resources.dao.DAORuta
  ub.edu.resources.dao.DAO <|-- ub.edu.resources.dao.DAOComarca
  ub.edu.resources.dao.DAO <|-- ub.edu.resources.dao.DAORelacioComarcaRuta
  ub.edu.resources.dao.DAO <|-- ub.edu.resources.dao.DAOPersona
  ub.edu.resources.dao.DAORelacioComarcaRuta --> ub.edu.resources.dao.Parell: usa

  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOComarca : daoComarca
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAOPersona : daoPersona
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAORelacioComarcaRuta : daoRelacioRutaComarca
  ub.edu.resources.service.DataService o-- ub.edu.resources.dao.DAORuta : daoRuta
  ub.edu.resources.service.FactoryMOCK .up.|> ub.edu.resources.service.AbstractFactoryData
ub.edu.controller.Controller -- ub.edu.model.Ruta : rutaMap
ub.edu.controller.Controller -- ub.edu.model.Comarca : comarcaMap

ub.edu.model.XarxaPersones "1" --> "*" ub.edu.model.Persona : conté
ub.edu.model.Ruta "1" --> "1..*" ub.edu.model.Comarca : passaPer
right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
